--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "IPAPP", ipDebugApp
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -49,6 +50,7 @@ dependencies {
     implementation 'com.android.support:design:25.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:25.0.2'
+    implementation 'com.android.support:support-vector-drawable:25.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
