--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:25.0.2'
     implementation 'com.android.support:support-vector-drawable:25.4.0'
+    implementation 'com.google.android.gms:play-services:11.+'
+    implementation 'com.google.android.gms:play-services-vision:11.+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
