--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:25.4.0'
     implementation 'com.google.android.gms:play-services:11.+'
     implementation 'com.google.android.gms:play-services-vision:11.+'
+    implementation 'com.google.android.gms:play-services-maps:11.+'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
